--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-router-dom": "^6.26.2",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "socket.io-client": "^4.7.5",
+    "ton-core": "^0.53.0",
+    "ton-crypto": "^3.2.0",
     "tweetnacl-util": "0.15.1",
     "vite-plugin-node-polyfills": "^0.22.0"
   },
